# FRICI

./: .gitignore  README.md  setup.cfg
FRICI/AI/: Core.py  adatbeolvasás.py
FRICI/DataManagement/: DataUpload.py
