[metadata]
# replace with your username:
name = FRICI-Norphet
version = 0.0.1
author = Norphet
description = An algorithm that will recommend the best avaliable recipe from input ingredients and other deterministic values.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Norphet/FRICI
project_urls =
    Bug Tracker = https://github.com/Norphet/FRICI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6